--- a/05/style.css
+++ b/05/style.css
@@ -13,3 +13,12 @@ body {
     height: 100%;
 }
 
+#collisionCanvas {
+    /* border: 5px solid black; */
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+}
